bevy_gpu_compute_macro/tests/ui/no_doc_comments.stderr
error: Doc comments are not allowed in wgsl_to_rust shader modules. Please remove them.
 --> tests/ui/no_doc_comments.rs:6:5
  |
6 |     /** This is doc comment */
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/no_doc_comments.rs:11:2
   |
11 | }
   |  ^ the main function must be defined at the crate level (in `$DIR/tests/ui/no_doc_comments.rs`)
   |
note: here is a function named `main`
  --> tests/ui/no_doc_comments.rs:8:5
   |
8  |     fn main() {
   |     ^^^^^^^^^
   = note: you have one or more functions named `main` not defined at the crate level
   = help: consider moving the `main` function definitions
